--- a/app/views/admin/columns/new.html.erb
+++ b/app/views/admin/columns/new.html.erb
@@ -20,8 +20,11 @@
               </div>
               
               <div class="form-group">
-                  <%= form.hidden_field :admin_id, value: @curremt_admins.id %>
+                  <%= form.hidden_field :admin_id, value: curremt_admins.id %>
               </div>
+              
+               <label for="exampleInputEmail1">タグ</label>
+                  <textarea name="tag_name" class="form-control post_form"></textarea>
     
               <div class="form-group">          
                  <%= f.submit '新規登録' %>
