--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,11 +1,37 @@
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/customers/shared/error_messages", resource: resource %>
+  <%= render "customers/shared/error_messages", resource: resource %>
 
+   <div class="field">
+    <%= f.label :first_name %><br />
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "道子" %>
+  </div>
+   
+   
+   <div class="field">
+    <%= f.label :last_name %><br />
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "令和" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :first_name_kana %><br />
+    <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "ミチコ" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :last_name_kana %><br />
+    <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "レイワ" %>
+  </div>
+  
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+　
+　<div class="field">
+    <%= f.label :telephone_number %><br />
+    <%= f.text_field :telephone_number, autofocus: true, autocomplete: "0000000000" %>
   </div>
 
   <div class="field">
@@ -26,4 +52,4 @@
   </div>
 <% end %>
 
-<%= render "public/customers/shared/links" %>
+<%= render "customers/shared/links" %>
