--- a/app/views/admin/services/new.html.erb
+++ b/app/views/admin/services/new.html.erb
@@ -16,7 +16,7 @@
               </div>
               <div class="form-group">    
                 <label for="service_price">施工目安時間</label>
-                　<%= f.datetime_field:time, placeholder:"2：00" %>
+                　<%= f.text_field:time, placeholder:"2：00" %>
               </div>
               <div class="form-group">    
                 <label for="service_price">目安工賃</label>
