[add]ヘッダー追加

--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -25,7 +25,7 @@
              <%=@customer.email %>
         </div>
             <%= link_to "編集する",  edit_customer_path(@customer.id) %>
-            <%= link_to "注文履歴一覧を見る",) %>
+            <%= link_to "注文履歴一覧を見る", reservations_path %>
 
       </div>
     </div>         
