--- a/app/views/public/reservations/new,html.erb
+++ b/app/views/public/reservations/new,html.erb
@@ -18,10 +18,11 @@
                 <label for="reservation_displacement">排気量</label>
                 　<%= f.datetime_field:displacement, placeholder:"2：00" %>
               </div>
-              <!--<div class="form-group">    -->
-              <!--  <label for="reservation_">その他要望事項</label>-->
-              <!--  　<%#= f.text_area:, placeholder:"要望事項" %>-->
-              <!--</div>-->
+              
+              <div class="form-group">    
+                <label for="reservation_">その他要望事項</label>
+                　<%= f.text_area:extra, placeholder:"要望事項" %>
+              </div>
               
               <div class="form-group">    
                 <label for="reservation_start_time">希望時間</label>
