--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,73 @@
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+        <a class="navbar-brand" href="/">
+          <span>MotorBike</span>
+        </a>
+        <button class="navbar-toggler bg-dark"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if customer_signed_in? %>
+                <li class = "nav-item text-white">
+                  <%= link_to "マイページ", customer_path(current_customer.id) %>
+                </li>
+                <li class = "nav-item text-white">
+                  <%= link_to "予約一覧", reservations_path %>
+                </li>
+                <li class = "nav-item text-white">
+                  <%= link_to "サービス一覧", services_path %>
+                </li>
+                <li class = "nav-item text-white">
+                  <%= link_to "コラム一覧", columns_path %>
+                </li>
+                <li class = "nav-item text-white">
+                  <%= link_to "ログアウト", destroy_customer_session_path, method: :delete%>
+                </li>
+              <% elsif admin_signed_in? %>  
+                <li class = "nav-item text-white">
+                  <%= link_to "予約一覧",  admin_root_path %>
+                </li>
+                <li class = "nav-item text-white">
+                  <%= link_to "サービス一覧",  admin_services_path %>
+                </li>
+                <li class = "nav-item text-white">
+                  <%= link_to "会員一覧", admin_customers_path %>
+                </li>
+                <li class = "nav-item text-white">
+                  <%= link_to "コラム一覧",  admin_columns_path %>
+                </li>
+                <li class = "nav-item text-white">
+                  <%= link_to "ログアウト", destroy_admin_session_path ,method: :delete%>
+                </li>
+              <% else %>
+                <li class = "nav-item text-white">
+                  <%= link_to "サービス一覧", services_path %>
+                </li>
+                <li class = "nav-item text-white">
+                  <%= link_to "新規登録" ,new_customer_registration_path %>
+                </li>
+                <li class = "nav-item text-white">
+                  <%= link_to "ログイン",  new_customer_session_path, data: {turbolinks: false} %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+    </header>
     <%= yield %>
   </body>
 </html>
