--- a/app/views/admin/columns/show.html.erb
+++ b/app/views/admin/columns/show.html.erb
@@ -6,7 +6,7 @@
         
         <div class="form-group">  
            <label for="column_id">画像</label>
-             <%= attachment_image_tag column, :image, :fill, 300, 300, format: 'jpeg' %>
+             <%= attachment_image_tag @column, :image, :fill, 300, 300, format: 'jpeg' %>
         </div>
         <div class="form-group">  
            <label for="column_name">タイトル</label>        
@@ -17,7 +17,7 @@
              <%=@column.text %>
         </div>
             <%= link_to "編集する", edit_admin_column_path(@column.id) %>
-            <%= link_to "削除する", admin_column, method: :delete %>
+            <%= link_to "削除する", admin_column_path(@column.id), method: :delete %>
 
       </div>
     </div>         
