--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,7 +1,7 @@
 <main>
-  <div class= "container px-5 px-sm-0">
+  <div class= "container">
     <div class="row">
-      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <div class="col-sm-10 col-md-10 col-lg-10  mx-auto">
         <h1>会員一覧</h1>
          <table class="table table-hover table-inverse">
            <thead>
@@ -18,7 +18,7 @@
                  <td><%= customer.id%></td>
                  <td><%= link_to "#{customer.last_name+customer.first_name}",  admin_customer_path(customer.id)%></td>
                  <td><%= customer.email%></td>
-                 <td><%= link_to "詳細", admin_customer(customer.id)%></td>
+                 <td><%= link_to "詳細", admin_customer_path(customer.id)%></td>
                </tr>
              <% end %>
            </tbody> 
