--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,7 +1,7 @@
 <main>
-  <div class= "container px-5 px-sm-0">
+  <div class= "container">
     <div class="row">
-      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <div class="col-sm-12 col-md-12 col-lg-12 mx-auto">
         <h1>予約一覧</h1>
          <table class="table table-hover table-inverse">
            <thead>
@@ -16,9 +16,9 @@
              <% @reservations.each do |reservation|%>
                <tr>
                  <td><%= reservation.start_time%></td>
-                 <td><%= reservation.customer.last_name+reservation.customer.first_name%></td>
-                 <td><%= reservation.servise.name%></td>
-                 <td><%= link_to "詳細", admin_reservation(reservation.id)%></td>
+                 <td><%= reservation.customer.first_name+reservation.customer.last_name%></td>
+                 <td><%= reservation.service.name%></td>
+                 <td><%= link_to "詳細", admin_reservation_path(reservation.id)%></td>
                </tr>
              <% end %>
            </tbody> 
