--- a/app/views/admin/reservations/edit.html.erb
+++ b/app/views/admin/reservations/edit.html.erb
@@ -8,11 +8,7 @@
                   <label for="reservation_start_time">予約開始時間</label>
                     <%= f.datetime_field :start_time, autofocus: true, id:"inputStartTime" %>
                 </div>
-                <div class="form-group">  
-                  <label for="reservation_finish_time">予約終了時間</label>
-                    <%= f.datetime_field :finish_time, id:"inputFinishTime" %>
-                </div>  
-        
+                
                 <div class="form-group">  
                   <label for="reservation_manufacturer">メーカー</label>
                     <%= f.text_field :manufacturer, id:"inputManufacturer", placeholder:"メーカー" %>
@@ -28,7 +24,7 @@
                 </div> 
                <div class="form-group">  
                   <label for="reservation_inquirie">その他要望事項</label>
-                    <%= f.text_area :inquirie, id:"inputInquirie", placeholder:"その他要望事項" %>  
+                    <%= f.text_area :extra, id:"inputInquirie", placeholder:"その他要望事項" %>  
                </div> 
        
                <div class="form-group">  
