--- a/app/views/admin/services/show.html.erb
+++ b/app/views/admin/services/show.html.erb
@@ -1,9 +1,8 @@
-<h1>商品詳細</h1>
-<%= attachment_image_tag @item, :image, :fill, 300, 300, format: 'jpeg' %>
-  <p>商品名：<%= @item.name %></p>
-  <p>商品説明：<%= @item.introduction %></p>
-  <p>ジャンル：<%= @item.genre_id %></p>
-  <p>税込価格：<%= @item.price %></p>
-  <p>販売ステータス：<%= @item.is_active %></p>
+<h1>サービス詳細</h1>
 
-<%= link_to "編集する", edit_admin_item_path(@item.id)%>
+  <p>サービう：<%= @service.name %></p>
+  <p>商品説明：<%= @service.introduction %></p>
+  <p>目安工賃：<%= @service.price %></p>
+  <p>目安施工時間：<%= @service.time %></p>
+
+<%= link_to "編集する", edit_admin_service_path(@service.id)%>
