--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -2,38 +2,44 @@
   <div class= "container px-5 px-sm-0">
     <div class="row">
       <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-        <%= "#{@customer.last_name+@customer.first_name}さんの会員編集"%>
-                <div class="form-group">  
-                  <label for="customer_id">会員ID</label>
-                    <%= @customer.id%>
-                </div> 
+        <h4>会員情報編集</h4>
+          <table class="table">
             <%= form_with model: @customer, url: admin_customer_path,  method: :patch, local:true do |f| %>
-                <div class="form-group">  
-                  <label for="customer_name">氏名</label>
-                    <%= f.text_field :last_name, autofocus: true, id:"inputLastName", placeholder:"LastName"%>
-                    <%= f.text_field :first_name, autofocus: true, id:"inputFirstName", placeholder:"FirstName"%>
-                </div>  
-        
-                <div class="form-group">  
-                  <label for="customer_name_kana">フリガナ</label>
-                    <%= f.text_field :last_name_kana, autofocus: true, id:"inputLastNameKana", placeholder:"LastNameKana"%>
-                    <%= f.text_field :first_name_kana, autofocus: true, id:"inputFirstNameKana", placeholder:"FirstNameKana"%>
-                </div>  
-                
-                <div class="form-group">  
-                  <label for="customer_telephone_number">電話番号</label>
-                    <%= f.text_field :telephone_number, autofocus: true, id:"inputTelephoneNumber", placeholder:"TelephoneNumber"%>
-                </div>  
-                <div class="form-group">  
-                  <label for="customer_email">メールアドレス</label>
-                    <%= f.text_field :email, autofocus: true, id:"inputEmail", placeholder:"Email"%>  
-                </div> 
-               
-       
-               <div class="form-group">  
-                  <%= f.submit '変更を保存' %>
-               </div>
+                <tr>
+                  <div class="form-group">  
+                    <th><label for="customer_name">氏名</label></th>
+                     <th>
+                        <%= f.text_field :first_name, autofocus: true, id:"inputFirstName", placeholder:"FirstName" %>
+                        <%= f.text_field :last_name, autofocus: true, id:"inputLastName", placeholder:"LastName" %>
+                     </th>
+                  </div>
+                </tr>
+                <tr>
+                  <div class="form-group">  
+                    <th><label for="customer_name_kana">フリガナ</label></th>
+                    <th>
+                      <%= f.text_field :first_name_kana, autofocus: true, id:"inputFirstNameKana", placeholder:"FirstNameKana" %>
+                      <%= f.text_field :last_name_kana, autofocus: true, id:"inputLastNameKana", placeholder:"LastNameKana" %>
+                    </th>
+                  </div>
+                </tr>
+                <tr>
+                  <div class="form-group">  
+                    <th><label for="customer_telephone_number">電話番号</label></th>
+                      <th><%= f.text_field :telephone_number, autofocus: true, id:"inputTelephoneNumber", placeholder:"TelephoneNumber" %></th>
+                  </div>
+                </tr>
+                <tr>
+                  <div class="form-group">  
+                    <th><label for="customer_email">メールアドレス</label></th>
+                    <th><%= f.email_field :email, autofocus: true, id:"inputEmail", placeholder:"email" %></th>
+                  </div>
+                </tr>
+                <tr>
+                  <th><%= f.submit '編集内容を保存'%></th>
+                </tr>
             <% end %>
+          </table>
       </div>
     </div>       
   </div>        
