--- a/app/views/admin/reservations/edit.html.erb
+++ b/app/views/admin/reservations/edit.html.erb
@@ -3,34 +3,53 @@
     <div class="row">
       <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
         <h4>予約編集</h4>
+          <table class="table">
             <%= form_with model: @reservation, url: admin_reservation_path,  method: :patch, local:true do |f| %>
+              <tr>
                 <div class="form-group">  
-                  <label for="reservation_start_time">予約開始時間</label>
-                    <%= f.datetime_field :start_time, autofocus: true, id:"inputStartTime" %>
+                  <th><label for="reservation_start_time">予約開始時間</label></th>
+                  <th>
+                    <%= f.datetime_field :start_time %>
+                  </th>
                 </div>
-                
+              </tr>
+              <tr>
                 <div class="form-group">  
-                  <label for="reservation_manufacturer">メーカー</label>
-                    <%= f.text_field :manufacturer, id:"inputManufacturer", placeholder:"メーカー" %>
-                </div>  
-                
+                  <th><label for="reservation_manufacturer">メーカー</label></th>
+                  <th>
+                    <%= f.text_field :manufacturer, placeholder:"例）HONDA" %>
+                  </th>
+                </div>
+              </tr>
+              <tr>
                 <div class="form-group">  
-                  <label for="reservation_name">車名</label>
-                    <%= f.text_field :name, id:"inputName", placeholder:"名前" %>
-                </div>  
+                  <th><label for="reservation_name">車名</label></th>
+                  <th>
+                    <%= f.text_area :name, placeholder:"例）CB400SF" %>
+                  </th>
+                </div>
+              </tr>
+              <tr>
                 <div class="form-group">  
-                  <label for="reservation_displacement">排気量</label>
-                    <%= f.number_field :displacement, id:"inputDisplacement", placeholder:"排気量" %>  
-                </div> 
-               <div class="form-group">  
-                  <label for="reservation_inquirie">その他要望事項</label>
-                    <%= f.text_area :extra, id:"inputInquirie", placeholder:"その他要望事項" %>  
-               </div> 
-       
-               <div class="form-group">  
-                  <%= f.submit '変更を保存' %>
-               </div>
+                  <th><label for="reservation_displacement">排気量</label></th>
+                  <th>
+                    <%= f.text_field :displacement, placeholder:"400(数字のみ入力)" %>
+                  </th>
+                </div>
+              </tr>
+              <tr>
+                <div class="form-group">  
+                  <th><label for="reservation_">その他要望事項</label></th>
+                  <th>
+                    <%= f.text_area:extra, placeholder:"要望事項" %>
+                  </th>
+                </div>
+              </tr>
+              <tr>
+                <th><%= f.submit '予約を完了'%></th>
+              </tr>  
             <% end %>
+          </table>
       </div>
     </div>       
   </div>        
