--- a/app/views/public/services/show.html.erb
+++ b/app/views/public/services/show.html.erb
@@ -1,7 +1,7 @@
 <main>
-  <div class= "container">
+  <div class= "container px-5 px-sm-0">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
         <h4>サービス詳細</h4>
           <table class="table">
             <tr>
