--- a/app/views/admin/columns/index.html.erb
+++ b/app/views/admin/columns/index.html.erb
@@ -3,6 +3,13 @@
      <div class="col-md-8 offset-md-1">
        <h3>コラム一覧</h3>
        <%= link_to "新規登録",new_admin_column_path %>
+       <div class="search-form">
+         <%= form_with url: admin_columns_path, method: :get, local: true do |f| %>
+           <%= f.text_field :keyword, value: @keyword %>
+           <%= f.submit "検索" %>
+         <% end %>
+       </div>
+
          <div class=row>
            <table class="table table-hover table-inverse">
              <thead>
