--- a/app/views/admin/reservations/show.html.erb
+++ b/app/views/admin/reservations/show.html.erb
@@ -34,6 +34,7 @@
             </tr>
           </table>
             <%= link_to "編集する", edit_admin_reservation_path(@reservation.id) %>
+            <%= link_to "削除する", admin_reservation_path(@reservation.id), method: :delete %>
       </div>
     </div>         
   </div>
