--- a/app/views/public/columns/index.html.erb
+++ b/app/views/public/columns/index.html.erb
@@ -3,7 +3,12 @@
      <div class="col-md-8 offset-md-1">
        <h3> </h3>
        <h3>コラム一覧</h3>
-       <h3></h3>
+       <div class="search-form">
+         <%= form_with url: columns_path, method: :get, local: true do |f| %>
+           <%= f.text_field :keyword, value: @keyword %>
+           <%= f.submit "検索" %>
+         <% end %>
+       </div>
          <div class=row>
            <table class="table table-hover table-inverse">
              <thead>
