--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
                   <%= link_to "マイページ", customer_path(current_customer.id) %>
                 </li>
                 <li class = "nav-item text-white">
-                  <%= link_to "予約一覧", reservations_path %>
+                  <%= link_to "予約一覧", customer_reservations_path(current_customer.id) %>
                 </li>
                 <li class = "nav-item text-white">
                   <%= link_to "サービス一覧", services_path %>
