topページ修正

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
 <main>
   <div class= "container">
-    <div class="row  align-items-center h-auto d-inline-block" style="width: 100%" >
+    <div class="row  align-items-center h-auto d-inline-block p-5" style="width: 100%"  >
       <div class="col-sm-12 col-md-12 col-lg-12 ">
         <h1></h1>
         <span class="text-center d-flex justify-content-center">
@@ -12,10 +12,10 @@
         </span>
       </div>
     </div>
-    <div class="row align-items-center">
+    <div class="row align-items-center p-5 ">
       <div class="col-sm-12 col-md-12 col-lg-12 ">
         <h4>新着コラム</h4>
-          <div class = "d-flex flex-row bd-highlight mb-3 flex-wrap justify-content-around">
+          <div class = "content d-flex flex-row bd-highlight mb-3 flex-wrap justify-content-around">
             <% @columns.each do |column|%>
               <div class="p-2 bd-highlight">  
                 <ul class="list-unstyled">
