--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,45 +29,45 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
               <% if customer_signed_in? %>
-                <li class = "nav-item text-white">
-                  <%= link_to "マイページ", customer_path(current_customer.id) %>
+                <li class = "p-2 nav-item text-white ">
+                  <%= link_to "マイページ", customer_path(current_customer.id) , class:"text-white"%>
                 </li>
-                <li class = "nav-item text-white">
+                <li class = "p-2 nav-item text-white">
                   <%= link_to "予約一覧", customer_reservations_path(current_customer.id) %>
                 </li>
-                <li class = "nav-item text-white">
+                <li class = "p-2 nav-item text-white">
                   <%= link_to "サービス一覧", services_path %>
                 </li>
-                <li class = "nav-item text-white">
+                <li class = "p-2 nav-item text-white">
                   <%= link_to "コラム一覧", columns_path %>
                 </li>
-                <li class = "nav-item text-white">
+                <li class = "p-2 nav-item text-white">
                   <%= link_to "ログアウト", destroy_customer_session_path, method: :delete%>
                 </li>
               <% elsif admin_signed_in? %>  
-                <li class = "nav-item text-white">
+                <li class = "p-2 nav-item text-white">
                   <%= link_to "予約一覧",  admin_root_path %>
                 </li>
-                <li class = "nav-item text-white">
+                <li class = "p-2 nav-item text-white">
                   <%= link_to "サービス一覧",  admin_services_path %>
                 </li>
-                <li class = "nav-item text-white">
+                <li class = "p-2 nav-item text-white">
                   <%= link_to "会員一覧", admin_customers_path %>
                 </li>
-                <li class = "nav-item text-white">
+                <li class = "p-2 nav-item text-white">
                   <%= link_to "コラム一覧",  admin_columns_path %>
                 </li>
-                <li class = "nav-item text-white">
+                <li class = "p-2 nav-item text-white">
                   <%= link_to "ログアウト", destroy_admin_session_path ,method: :delete%>
                 </li>
               <% else %>
-                <li class = "nav-item text-white">
+                <li class = "p-2 nav-item text-white">
                   <%= link_to "サービス一覧", services_path %>
                 </li>
-                <li class = "nav-item text-white">
+                <li class = "p-2 nav-item text-white">
                   <%= link_to "新規登録" ,new_customer_registration_path %>
                 </li>
-                <li class = "nav-item text-white">
+                <li class = "p-2 nav-item text-white">
                   <%= link_to "ログイン",  new_customer_session_path, data: {turbolinks: false} %>
                 </li>
               <% end %>
