--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class= "container">
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-12">
-        <h2>Sign up</h2>
+        <h2>新規登録</h2>
           <table class="table">
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
               <%= render "customers/shared/error_messages", resource: resource %>
