サービス削除追加

--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -16,7 +16,7 @@
              <% @customers.each do |customer|%>
                <tr>
                  <td><%= customer.id%></td>
-                 <td><%= link_to "#{customer.last_name+customer.first_name}",  admin_customer_path(customer.id)%></td>
+                 <td><%= link_to "#{customer.first_name+customer.last_name}",  admin_customer_path(customer.id)%></td>
                  <td><%= customer.email%></td>
                  <td><%= link_to "詳細", admin_customer_path(customer.id)%></td>
                </tr>
