--- a/app/views/admin/services/index.html.erb
+++ b/app/views/admin/services/index.html.erb
@@ -1,7 +1,7 @@
 <main>
   <div class= "container px-5 px-sm-0">
      <div class="col-md-8 offset-md-1">
-       <h3>商品一覧</h3>
+       <h4>サービス一覧</h4>
        <%= link_to "新規登録",new_admin_service_path %>
          <div class=row>
            <table class="table table-hover table-inverse">
