--- a/app/views/public/reservations/index.html.erb
+++ b/app/views/public/reservations/index.html.erb
@@ -2,7 +2,7 @@
   <div class= "container">
     <div class="row">
       <div class="col-sm-10 col-md-10 col-lg-10  mx-auto">
-        <h1>予約</h1>
+        <h4>予約一覧</h4>
          <table class="table table-hover table-inverse">
            <thead>
              <tr>
